--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,7 @@
   height: 123px;
   width: 123px;
   border-radius: 50%;
-  margin: 39px 0 0 -1px;
+  margin: 39px 0 0 0;
   object-fit: cover;
 }
 
