--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,7 @@
 @import url(../blocks/main/main.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/button/buttons.css);
+@import url(../blocks/buttons/buttons.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
