--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
 	max-width: 880px;
   min-width: 320px;
-	border-bottom: solid 1px #545454;
+	border-bottom: solid 1px rgba(84, 84, 84, .7);
 	margin: 44px 0 0 0;
 }
 
