add first six cards

--- a/blocks/card/__img/card__img.css
+++ b/blocks/card/__img/card__img.css
@@ -2,6 +2,7 @@
   width: 282px;
   height: 282px;
   object-fit: cover;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #000;
 }
