--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,8 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__gallery/popup__gallery.css);
+@import url(../blocks/popup/__img-gallery/popup__img-gallery.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__figcaption/popup__figcuption.css);
