--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,4 @@
 @import url(../blocks/popup/__img-gallery/popup__img-gallery.css);
 @import url(../blocks/popup/__figure/popup__figure.css);
 @import url(../blocks/popup/__figcaption/popup__figcuption.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
