--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,14 @@
 .popup {
   position: fixed;
+  display: flex;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .6);
-  display: none;
+  background-color: rgb(0, 0, 0, .5);
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s ease-in;
 }
