refactor: Я уже не понимаю что делаю [28/11 05:38]

--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -9,8 +9,6 @@
   border: none;
   padding: 0;
   margin-top: 4px;
-}
-
-.card__like-button:hover {
-  opacity: 0.5;
+  grid-column: 2;
+  grid-row: 1;
 }
