--- a/src/blocks/card/__capture/card__capture.css
+++ b/src/blocks/card/__capture/card__capture.css
@@ -1,6 +1,6 @@
 .card__capture {
   margin: 0;
-  color: #000;
+  color: black;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -8,4 +8,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 220px;
+  grid-column: 1;
+  grid-row: 1/2;
+  padding-top: 10px;
 }
