--- a/src/blocks/card/__items/card__items.css
+++ b/src/blocks/card/__items/card__items.css
@@ -1,5 +1,8 @@
 .card__items {
-  display: flex;
-  justify-content: space-between;
-  margin: 22px 20px 25px 18px;
+	display: grid;
+  grid-template-columns: 220px 23px;
+  grid-template-rows: 14px 24px;
+  margin: 17px 20px 25px 18px;
+  align-items: start;
+  justify-items: start;
 }
