--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -46,3 +46,4 @@
 
 @import url(../blocks/popup/__error-message/popup__error-message.css);
 @import url(../blocks/popup/__error-message/popup__error-message_active.css);
+@import url(../blocks/card/__like-counter/card__like-counter.css);
