--- a/src/blocks/buttons/buttons.css
+++ b/src/blocks/buttons/buttons.css
@@ -1,8 +1,9 @@
 .buttons {
   padding: 0;
+  background-repeat: no-repeat;
 }
 
-.buttons:hover {
+.buttons:hover:not([disabled="disabled"]) {
   opacity: 60%;
   transition: opacity .2s ease-in-out;
   cursor: pointer;
