--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 .main{display:flex;flex-direction:column;justify-content:center;margin:0 auto;max-width:880px}
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:44px 0 0;max-width:880px;min-width:320px}@media screen and (max-width:400px){.header{margin:24px 0 0}}
 .header__logo{margin-bottom:37px;max-height:33px;max-width:142px}@media screen and (max-width:890px){.header__logo{margin:4px 0 27px 27px;max-width:32%}}
-.buttons{padding:0}.buttons:hover{cursor:pointer;opacity:60%;transition:opacity .2s ease-in-out}
+.buttons{background-repeat:no-repeat;padding:0}.buttons:hover:not([disabled=disabled]){cursor:pointer;opacity:60%;transition:opacity .2s ease-in-out}
 .profile{display:flex;flex-wrap:wrap;justify-content:space-between}@media screen and (max-width:910px){.profile{margin:0 27px}}@media screen and (max-width:880px){.profile{align-items:center;justify-content:center}}@media screen and (max-width:480px){.profile{flex-direction:column}}@media screen and (max-width:380px){.profile{margin:0 19px}}
 .profile__avatar{border-radius:50%;height:123px;margin:39px 0 0;-o-object-fit:cover;object-fit:cover;width:123px}@media screen and (max-width:910px){.profile__avatar{margin:40px 0 0}}
 .profile__info{display:flex;flex-direction:column;margin:61px 0 0 27px;max-width:580px}@media screen and (max-width:880px){.profile__info{margin:27px 0 0 27px}}@media screen and (max-width:480px){.profile__info{margin:24px auto 0}}
@@ -13,6 +13,7 @@
 .profile__edit-button{background-color:unset;background-image:url(8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;height:24px;margin:0 0 6px 18px;width:24px}@media screen and (max-width:880px){.profile__edit-button{height:18px;width:18px}}
 .profile__description{font-size:18px;line-height:22px;margin:0;max-width:550px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:880px){.profile__description{font-size:14px;line-height:17px;margin:0 auto;max-width:275px}}
 .profile__add-button{background-color:unset;background-image:url(d86bb2edc2f6eadb96b7.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;box-sizing:border-box;height:50px;margin:74px 0 0 auto;width:150px}@media screen and (max-width:880px){.profile__add-button{margin:32px auto 0;max-width:580px;width:88%}}@media screen and (max-width:630px){.profile__add-button{max-width:282px}}@media screen and (max-width:508px){.profile__add-button{background-size:16px;width:100%}}
+.profile__img-wrapper{position:relative}.profile__img-wrapper:before{background-color:rgba(0,0,0,.5);background-image:url(8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;background-size:26px;border-radius:50%;box-sizing:border-box;content:"";cursor:pointer;display:none;height:123px;padding:15px;position:absolute;top:39px;width:123px;z-index:1}.profile__img-wrapper:hover:before{display:flex}
 .cards-section{margin-top:50px}@media screen and (max-width:880px){.cards-section{margin-top:35px}}
 .cards{display:grid;gap:20px 16px;grid-template-columns:repeat(3,1fr);list-style:none;margin:0;padding:0}@media screen and (max-width:910px){.cards{grid-template-columns:repeat(2,1fr);margin:0 auto;max-width:580px}}@media screen and (max-width:630px){.cards{grid-template-columns:1fr;max-width:282px}}
 .card{background-color:#fff;border-bottom-left-radius:10px;border-bottom-right-radius:10px;border-top-left-radius:12px;border-top-right-radius:12px;display:flex;flex-direction:column;max-width:282px;overflow:hidden;position:relative}
@@ -21,9 +22,12 @@
 .card__capture{color:#000;font-size:24px;font-weight:900;grid-column:1;grid-row:1/2;line-height:29px;margin:0;max-width:220px;overflow:hidden;padding-top:10px;text-overflow:ellipsis;white-space:nowrap}
 .card__like-button{background-color:unset;background-image:url(87ed371465c7a6a1cd01.svg);background-position:50%;background-repeat:no-repeat;border:none;box-sizing:border-box;grid-column:2;grid-row:1;height:22px;margin-top:4px;padding:0;width:22px}
 .card__like-button_active{background-image:url(fe17a515669479b1e649.svg)}
+.card__like-counter{color:#000;font-size:13px;grid-column:2;grid-row:2;line-height:16px;padding-top:19px;place-self:center;text-align:center}
+.card__delete-button{background-color:transparent;background-image:url(a274c87c0f6b553b47ad.svg);background-size:contain;border:none;cursor:pointer;display:none;height:20px;order:1;padding:0;position:absolute;right:15px;top:17px;width:18px}
+.card__delete-button_visible{display:flex}
 .footer{margin:67px 0 53px;max-width:880px;min-width:300px}@media screen and (max-width:910px){.footer{margin:51px 0 30px}}
 .footer__copyright{color:#545454;font-size:18px;line-height:22px;margin:0}@media screen and (max-width:910px){.footer__copyright{font-size:14px;line-height:17px;margin-left:27px}}@media screen and (max-width:480px){.footer__copyright{margin-left:19px}}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:all .5s ease-in;visibility:hidden}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:all .5s ease-in;visibility:hidden;z-index:2}
 .popup__button{background-color:#000;border:none;border-radius:2px;color:#fff;font-size:18px;height:50px;line-height:22px;margin:20px auto 36px;text-align:center;width:358px}.popup__button:hover{opacity:.8}@media screen and (max-width:630px){.popup__button{font-size:14px;height:48px;line-height:17px;margin:16px auto 24px;width:240px}}
 .popup__button_disabled{background-color:transparent;border:1px solid #000;color:#000;opacity:20%}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:34px 36px 46px}@media screen and (max-width:630px){.popup__title{font-size:18px;line-height:22px;margin:24px 21px 72px;width:238px}}
@@ -37,8 +41,6 @@
 .popup__img-gallery{max-height:75vh;max-width:75vw}
 .popup__figure{margin:0}
 .popup__figcuption{font-size:12px;line-height:15px;text-align:left}
-.card__delete-button{background-color:transparent;background-image:url(a274c87c0f6b553b47ad.svg);background-size:contain;border:none;cursor:pointer;height:20px;order:1;padding:0;position:absolute;right:15px;top:17px;width:18px}
 .popup__error-message{color:red;display:none;font-size:12px;line-height:15px;margin:0 36px 8px;text-align:left}@media screen and (max-width:630px){.popup__error-message{margin:0 20px 8px}}
 .popup__error-message_active{display:flex}
-.card__like-counter{color:#000;font-size:13px;grid-column:2;grid-row:2;line-height:16px;padding-top:19px;place-self:center;text-align:center}
 
