--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -2,7 +2,7 @@
   width: 358px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .20);
-  margin: 0 auto 28px auto;
+  margin: 0 34px 28px;
   font-size: 14px;
   line-height: 17px;
   color: #000;
@@ -14,6 +14,7 @@
 @media screen and (max-width: 630px) {
   .popup__input {
     width: 238px;
+		margin: 0 20px 28px;
   }
 }
 
